engine/tools/shader_compiler/frontend/shader_parser.cpp
#include "frontend/shader_parser.h"

#include <algorithm>
#include <cstdlib>
#include <limits>
#include <sstream>
#include <unordered_set>
#include <utility>

namespace toy3d::shader
{
    // Parser helpers use string_view for non-owning token-name comparisons and
    // optional when a grammar conversion has no valid value to return.
    namespace
    {
        template <typename Collection> bool contains_name(const Collection& values, const std::string& name)
        {
            return std::any_of(values.begin(), values.end(), [&](const auto& value) { return value.name == name; });
        }

        bool is_one_of(std::string_view value, std::initializer_list<std::string_view> choices)
        {
            return std::find(choices.begin(), choices.end(), value) != choices.end();
        }

        std::optional<PropertyType> property_type_from_name(std::string_view name)
        {
            if (name == "Float")
                return PropertyType::Float;
            if (name == "Float2")
                return PropertyType::Float2;
            if (name == "Float3")
                return PropertyType::Float3;
            if (name == "Float4")
                return PropertyType::Float4;
            if (name == "Color")
                return PropertyType::Color;
            if (name == "Matrix4x4")
                return PropertyType::Matrix4x4;
            if (name == "Range")
                return PropertyType::Range;
            if (name == "Texture2D")
                return PropertyType::Texture2D;
            if (name == "TextureCube")
                return PropertyType::TextureCube;
            if (name == "Sampler")
                return PropertyType::Sampler;
            if (name == "ComparisonSampler")
                return PropertyType::ComparisonSampler;
            return std::nullopt;
        }

        std::optional<ShaderValueType> parameter_type_from_name(std::string_view name)
        {
            if (name == "Float")
                return ShaderValueType::Float32;
            if (name == "Float2")
                return ShaderValueType::Float32x2;
            if (name == "Float3")
                return ShaderValueType::Float32x3;
            if (name == "Float4")
                return ShaderValueType::Float32x4;
            if (name == "Float4x4")
                return ShaderValueType::Float32x4x4;
            return std::nullopt;
        }

        std::optional<ResourceKind> resource_kind_from_name(std::string_view name)
        {
            if (name == "Texture2D")
                return ResourceKind::Texture2D;
            if (name == "Texture2DArray")
                return ResourceKind::Texture2DArray;
            if (name == "Texture3D")
                return ResourceKind::Texture3D;
            if (name == "TextureCube")
                return ResourceKind::TextureCube;
            if (name == "Texture2DMS")
                return ResourceKind::Texture2DMS;
            if (name == "Sampler")
                return ResourceKind::Sampler;
            if (name == "ComparisonSampler")
                return ResourceKind::ComparisonSampler;
            if (name == "Buffer")
                return ResourceKind::Buffer;
            if (name == "ByteAddressBuffer")
                return ResourceKind::ByteAddressBuffer;
            if (name == "StructuredBuffer")
                return ResourceKind::StructuredBuffer;
            if (name == "RWBuffer")
                return ResourceKind::RWBuffer;
            if (name == "RWByteAddressBuffer")
                return ResourceKind::RWByteAddressBuffer;
            if (name == "RWStructuredBuffer")
                return ResourceKind::RWStructuredBuffer;
            if (name == "RWTexture2D")
                return ResourceKind::RWTexture2D;
            if (name == "RWTexture2DArray")
                return ResourceKind::RWTexture2DArray;
            if (name == "RWTexture3D")
                return ResourceKind::RWTexture3D;
            return std::nullopt;
        }

        std::optional<ResourceElementType> resource_element_type_from_name(std::string_view name)
        {
            if (name == "Float")
                return ResourceElementType::Float;
            if (name == "Float2")
                return ResourceElementType::Float2;
            if (name == "Float3")
                return ResourceElementType::Float3;
            if (name == "Float4")
                return ResourceElementType::Float4;
            if (name == "Int")
                return ResourceElementType::Int;
            if (name == "Int2")
                return ResourceElementType::Int2;
            if (name == "Int3")
                return ResourceElementType::Int3;
            if (name == "Int4")
                return ResourceElementType::Int4;
            if (name == "UInt")
                return ResourceElementType::UInt;
            if (name == "UInt2")
                return ResourceElementType::UInt2;
            if (name == "UInt3")
                return ResourceElementType::UInt3;
            if (name == "UInt4")
                return ResourceElementType::UInt4;
            if (name == "Float2x2")
                return ResourceElementType::Float2x2;
            if (name == "Float2x3")
                return ResourceElementType::Float2x3;
            if (name == "Float2x4")
                return ResourceElementType::Float2x4;
            if (name == "Float3x2")
                return ResourceElementType::Float3x2;
            if (name == "Float3x3")
                return ResourceElementType::Float3x3;
            if (name == "Float3x4")
                return ResourceElementType::Float3x4;
            if (name == "Float4x2")
                return ResourceElementType::Float4x2;
            if (name == "Float4x3")
                return ResourceElementType::Float4x3;
            if (name == "Float4x4")
                return ResourceElementType::Float4x4;
            return std::nullopt;
        }

        bool is_matrix(ResourceElementType type)
        {
            switch (type)
            {
            case ResourceElementType::Float2x2:
            case ResourceElementType::Float2x3:
            case ResourceElementType::Float2x4:
            case ResourceElementType::Float3x2:
            case ResourceElementType::Float3x3:
            case ResourceElementType::Float3x4:
            case ResourceElementType::Float4x2:
            case ResourceElementType::Float4x3:
            case ResourceElementType::Float4x4:
                return true;
            default:
                return false;
            }
        }

        bool requires_element_type(ResourceKind kind)
        {
            return kind != ResourceKind::Sampler && kind != ResourceKind::ComparisonSampler &&
                   kind != ResourceKind::ByteAddressBuffer && kind != ResourceKind::RWByteAddressBuffer;
        }

        bool allows_matrix_element(ResourceKind kind)
        {
            return kind == ResourceKind::StructuredBuffer || kind == ResourceKind::RWStructuredBuffer;
        }

        bool valid_shader_name(std::string_view name)
        {
            if (name.empty() || name.front() == '/' || name.back() == '/')
                return false;
            std::size_t segment_start = 0;
            while (segment_start < name.size())
            {
                const std::size_t segment_end = name.find('/', segment_start);
                const std::size_t end = segment_end == std::string_view::npos ? name.size() : segment_end;
                if (end == segment_start)
                    return false;
                const char first = name[segment_start];
                if (!((first >= 'A' && first <= 'Z') || (first >= 'a' && first <= 'z') || first == '_'))
                    return false;
                for (std::size_t index = segment_start + 1; index < end; ++index)
                {
                    const char value = name[index];
                    if (!((value >= 'A' && value <= 'Z') || (value >= 'a' && value <= 'z') ||
                          (value >= '0' && value <= '9') || value == '_'))
                        return false;
                }
                if (segment_end == std::string_view::npos)
                    break;
                segment_start = segment_end + 1;
            }
            return true;
        }

        bool is_stencil_compare(std::string_view value)
        {
            return is_one_of(value,
                             {"Never", "Less", "Equal", "LessEqual", "Greater", "NotEqual", "GreaterEqual", "Always"});
        }

        bool is_stencil_operation(std::string_view value)
        {
            return is_one_of(value, {"Keep", "Zero", "Replace", "IncrementClamp", "DecrementClamp", "Invert",
                                     "IncrementWrap", "DecrementWrap"});
        }

        bool is_blend_factor(std::string_view value)
        {
            return is_one_of(value, {"Zero", "One", "SrcColor", "OneMinusSrcColor", "DstColor", "OneMinusDstColor",
                                     "SrcAlpha", "OneMinusSrcAlpha", "DstAlpha", "OneMinusDstAlpha", "ConstantColor",
                                     "OneMinusConstantColor", "SrcAlphaSaturate"});
        }

        bool is_blend_operation(std::string_view value)
        {
            return is_one_of(value, {"Add", "Subtract", "ReverseSubtract", "Min", "Max"});
        }

        std::optional<BindingGroup> binding_group_from_name(std::string_view name)
        {
            if (name == "Global")
                return BindingGroup::Global;
            if (name == "View")
                return BindingGroup::View;
            if (name == "Pass")
                return BindingGroup::Pass;
            if (name == "Material")
                return BindingGroup::Material;
            if (name == "Object")
                return BindingGroup::Object;
            return std::nullopt;
        }

        std::optional<ShaderStage> stage_from_pragma(std::string_view name)
        {
            if (name == "vertex")
                return ShaderStage::Vertex;
            if (name == "pixel")
                return ShaderStage::Pixel;
            if (name == "compute")
                return ShaderStage::Compute;
            return std::nullopt;
        }

        bool is_valid_pass_state_value(std::string_view state, std::string_view value)
        {
            if (state == "PrimitiveTopology")
                return is_one_of(value, {"PointList", "LineList", "LineStrip", "TriangleList", "TriangleStrip"});
            if (state == "Cull")
                return is_one_of(value, {"Off", "Front", "Back"});
            if (state == "FrontFace")
                return is_one_of(value, {"Clockwise", "CounterClockwise"});
            if (state == "Fill")
                return is_one_of(value, {"Solid", "Wireframe"});
            if (state == "DepthTest")
                return is_one_of(value, {"Off", "Never", "Less", "Equal", "LessEqual", "Greater", "NotEqual",
                                         "GreaterEqual", "Always"});
            if (state == "DepthWrite")
                return is_one_of(value, {"Off", "On"});
            if (state == "ColorWrite")
                return is_one_of(value, {"None", "R", "G", "B", "A", "RG", "RGB", "RGBA"});
            return false;
        }

        // These parser conversions use string_view because token text is only
        // inspected while producing the owned normalized enum state.
        ShaderGraphicsPassState::PrimitiveTopology primitive_topology_from_name(std::string_view value)
        {
            if (value == "PointList")
                return ShaderGraphicsPassState::PrimitiveTopology::PointList;
            if (value == "LineList")
                return ShaderGraphicsPassState::PrimitiveTopology::LineList;
            if (value == "LineStrip")
                return ShaderGraphicsPassState::PrimitiveTopology::LineStrip;
            if (value == "TriangleStrip")
                return ShaderGraphicsPassState::PrimitiveTopology::TriangleStrip;
            return ShaderGraphicsPassState::PrimitiveTopology::TriangleList;
        }

        ShaderGraphicsPassState::CullMode cull_mode_from_name(std::string_view value)
        {
            if (value == "Off")
                return ShaderGraphicsPassState::CullMode::None;
            if (value == "Front")
                return ShaderGraphicsPassState::CullMode::Front;
            return ShaderGraphicsPassState::CullMode::Back;
        }

        ShaderGraphicsPassState::CompareOperation compare_operation_from_name(std::string_view value)
        {
            if (value == "Never")
                return ShaderGraphicsPassState::CompareOperation::Never;
            if (value == "Less")
                return ShaderGraphicsPassState::CompareOperation::Less;
            if (value == "Equal")
                return ShaderGraphicsPassState::CompareOperation::Equal;
            if (value == "LessEqual")
                return ShaderGraphicsPassState::CompareOperation::LessEqual;
            if (value == "Greater")
                return ShaderGraphicsPassState::CompareOperation::Greater;
            if (value == "NotEqual")
                return ShaderGraphicsPassState::CompareOperation::NotEqual;
            if (value == "GreaterEqual")
                return ShaderGraphicsPassState::CompareOperation::GreaterEqual;
            return ShaderGraphicsPassState::CompareOperation::Always;
        }

        ShaderGraphicsPassState::StencilOperation stencil_operation_from_name(std::string_view value)
        {
            if (value == "Zero")
                return ShaderGraphicsPassState::StencilOperation::Zero;
            if (value == "Replace")
                return ShaderGraphicsPassState::StencilOperation::Replace;
            if (value == "IncrementClamp")
                return ShaderGraphicsPassState::StencilOperation::IncrementClamp;
            if (value == "DecrementClamp")
                return ShaderGraphicsPassState::StencilOperation::DecrementClamp;
            if (value == "Invert")
                return ShaderGraphicsPassState::StencilOperation::Invert;
            if (value == "IncrementWrap")
                return ShaderGraphicsPassState::StencilOperation::IncrementWrap;
            if (value == "DecrementWrap")
                return ShaderGraphicsPassState::StencilOperation::DecrementWrap;
            return ShaderGraphicsPassState::StencilOperation::Keep;
        }

        ShaderGraphicsPassState::BlendFactor blend_factor_from_name(std::string_view value)
        {
            if (value == "Zero")
                return ShaderGraphicsPassState::BlendFactor::Zero;
            if (value == "SrcColor")
                return ShaderGraphicsPassState::BlendFactor::SourceColor;
            if (value == "OneMinusSrcColor")
                return ShaderGraphicsPassState::BlendFactor::OneMinusSourceColor;
            if (value == "DstColor")
                return ShaderGraphicsPassState::BlendFactor::DestinationColor;
            if (value == "OneMinusDstColor")
                return ShaderGraphicsPassState::BlendFactor::OneMinusDestinationColor;
            if (value == "SrcAlpha")
                return ShaderGraphicsPassState::BlendFactor::SourceAlpha;
            if (value == "OneMinusSrcAlpha")
                return ShaderGraphicsPassState::BlendFactor::OneMinusSourceAlpha;
            if (value == "DstAlpha")
                return ShaderGraphicsPassState::BlendFactor::DestinationAlpha;
            if (value == "OneMinusDstAlpha")
                return ShaderGraphicsPassState::BlendFactor::OneMinusDestinationAlpha;
            if (value == "ConstantColor")
                return ShaderGraphicsPassState::BlendFactor::ConstantColor;
            if (value == "OneMinusConstantColor")
                return ShaderGraphicsPassState::BlendFactor::OneMinusConstantColor;
            if (value == "SrcAlphaSaturate")
                return ShaderGraphicsPassState::BlendFactor::SourceAlphaSaturate;
            return ShaderGraphicsPassState::BlendFactor::One;
        }

        ShaderGraphicsPassState::BlendOperation blend_operation_from_name(std::string_view value)
        {
            if (value == "Subtract")
                return ShaderGraphicsPassState::BlendOperation::Subtract;
            if (value == "ReverseSubtract")
                return ShaderGraphicsPassState::BlendOperation::ReverseSubtract;
            if (value == "Min")
                return ShaderGraphicsPassState::BlendOperation::Minimum;
            if (value == "Max")
                return ShaderGraphicsPassState::BlendOperation::Maximum;
            return ShaderGraphicsPassState::BlendOperation::Add;
        }

        ShaderGraphicsPassState::ColorWriteMask color_write_mask_from_name(std::string_view value)
        {
            if (value == "None")
                return ShaderGraphicsPassState::ColorWriteMask::None;
            if (value == "R")
                return ShaderGraphicsPassState::ColorWriteMask::Red;
            if (value == "G")
                return ShaderGraphicsPassState::ColorWriteMask::Green;
            if (value == "B")
                return ShaderGraphicsPassState::ColorWriteMask::Blue;
            if (value == "A")
                return ShaderGraphicsPassState::ColorWriteMask::Alpha;
            if (value == "RG")
                return ShaderGraphicsPassState::ColorWriteMask::RedGreen;
            if (value == "RGB")
                return ShaderGraphicsPassState::ColorWriteMask::RedGreenBlue;
            return ShaderGraphicsPassState::ColorWriteMask::All;
        }

        bool is_pass_state_name(std::string_view name)
        {
            return is_one_of(name, {"PrimitiveTopology", "Cull", "FrontFace", "Fill", "DepthTest", "DepthWrite",
                                    "Stencil", "Blend", "ColorWrite"});
        }
    } // namespace

    bool ParseResult::succeeded() const
    {
        return asset.has_value() &&
               std::none_of(diagnostics.begin(), diagnostics.end(), [](const Diagnostic& diagnostic)
                            { return diagnostic.severity == DiagnosticSeverity::Error; });
    }

    ParseResult parse_shader(std::string_view source, std::string path)
    {
        return ShaderParser(source, std::move(path)).parse();
    }

    ShaderParser::ShaderParser(std::string_view source, std::string path) : tokenizer(source, std::move(path)) {}

    ParseResult ShaderParser::parse()
    {
        ShaderAsset asset;
        if (!match_identifier("Shader"))
        {
            add_error(DiagnosticCode::UnexpectedToken, peek().location, "Shader asset must begin with 'Shader'.");
        }
        else
        {
            asset.location = peek().location;
        }

        if (const auto name = expect(TokenKind::StringLiteral, "Expected the Shader display name."))
        {
            asset.name = name->text;
            if (!valid_shader_name(asset.name))
            {
                add_error(DiagnosticCode::InvalidShaderName, name->location,
                          "Shader name must contain slash-separated ASCII identifier segments.");
            }
        }
        expect(TokenKind::LeftBrace, "Expected '{' after the Shader name.");

        if (!match_identifier("Version"))
        {
            add_error(DiagnosticCode::InvalidVersion, peek().location, "Shader asset must declare Version 1 first.");
        }
        if (const auto version = expect(TokenKind::Number, "Expected numeric Shader version."))
        {
            if (version->text != "1")
            {
                add_error(DiagnosticCode::InvalidVersion, version->location,
                          "Only Shader asset Version 1 is supported.");
            }
            else
            {
                asset.version = 1;
            }
        }

        bool has_properties = false;
        bool has_parameters = false;
        bool has_resources = false;
        bool has_variants = false;
        while (!check(TokenKind::RightBrace) && !check(TokenKind::EndOfFile))
        {
            if (match_identifier("Properties"))
            {
                if (has_properties)
                {
                    add_error(DiagnosticCode::DuplicateSection, peek().location,
                              "Properties may only be declared once.");
                }
                has_properties = true;
                parse_properties(asset);
            }
            else if (match_identifier("Parameters"))
            {
                if (has_parameters)
                {
                    add_error(DiagnosticCode::DuplicateSection, peek().location,
                              "Parameters may only be declared once.");
                }
                has_parameters = true;
                parse_parameters(asset);
            }
            else if (match_identifier("Resources"))
            {
                if (has_resources)
                {
                    add_error(DiagnosticCode::DuplicateSection, peek().location,
                              "Resources may only be declared once.");
                }
                has_resources = true;
                parse_resources(asset);
            }
            else if (match_identifier("Variants"))
            {
                if (has_variants)
                {
                    add_error(DiagnosticCode::DuplicateSection, peek().location, "Variants may only be declared once.");
                }
                has_variants = true;
                parse_variants(asset);
            }
            else if (match_identifier("HLSLINCLUDE"))
            {
                HlslBlock block;
                parse_hlsl_block(block);
                asset.includes.push_back(std::move(block));
            }
            else if (match_identifier("Pass"))
            {
                parse_pass(asset);
            }
            else
            {
                const Token unexpected = consume();
                add_error(DiagnosticCode::UnexpectedToken, unexpected.location,
                          "Unknown Shader field '" + unexpected.text + "'.");
            }
        }
        expect(TokenKind::RightBrace, "Expected '}' to close the Shader asset.");
        if (!check(TokenKind::EndOfFile))
        {
            add_error(DiagnosticCode::UnexpectedToken, peek().location, "Unexpected tokens after the Shader asset.");
        }
        if (asset.passes.empty())
        {
            add_error(DiagnosticCode::MissingEntryPoint, asset.location,
                      "Shader asset must contain at least one Pass.");
        }

        copy_tokenizer_diagnostics();
        ParseResult result;
        result.asset = std::move(asset);
        result.diagnostics = std::move(parser_diagnostics);
        if (!result.succeeded())
        {
            result.asset.reset();
        }
        return result;
    }

    const Token& ShaderParser::peek()
    {
        if (!lookahead)
        {
            lookahead = tokenizer.next();
            copy_tokenizer_diagnostics();
        }
        return *lookahead;
    }

    Token ShaderParser::consume()
    {
        Token result = peek();
        lookahead.reset();
        return result;
    }

    bool ShaderParser::check(TokenKind kind)
    {
        return peek().kind == kind;
    }

    bool ShaderParser::check_identifier(std::string_view text)
    {
        return peek().kind == TokenKind::Identifier && peek().text == text;
    }

    bool ShaderParser::match(TokenKind kind)
    {
        if (!check(kind))
        {
            return false;
        }
        consume();
        return true;
    }

    bool ShaderParser::match_identifier(std::string_view text)
    {
        if (!check_identifier(text))
        {
            return false;
        }
        consume();
        return true;
    }

    std::optional<Token> ShaderParser::expect(TokenKind kind, std::string message)
    {
        if (check(kind))
        {
            return consume();
        }
        add_error(DiagnosticCode::UnexpectedToken, peek().location, std::move(message));
        return std::nullopt;
    }

    std::optional<Token> ShaderParser::expect_identifier(std::string message)
    {
        return expect(TokenKind::Identifier, std::move(message));
    }

    bool ShaderParser::parse_properties(ShaderAsset& asset)
    {
        if (!expect(TokenKind::LeftBrace, "Expected '{' after Properties."))
        {
            return false;
        }
        while (!check(TokenKind::RightBrace) && !check(TokenKind::EndOfFile))
        {
            parse_property(asset);
        }
        return expect(TokenKind::RightBrace, "Expected '}' to close Properties.").has_value();
    }

    bool ShaderParser::parse_property(ShaderAsset& asset)
    {
        const auto name = expect_identifier("Expected a property name.");
        if (!name)
        {
            consume();
            return false;
        }
        Property property;
        property.name = name->text;
        property.location = name->location;
        validate_identifier(asset, *name, "property");
        const bool duplicate = contains_name(asset.properties, property.name);
        if (duplicate)
        {
            add_error(DiagnosticCode::DuplicateProperty, name->location, "Duplicate property '" + property.name + "'.");
        }
        expect(TokenKind::LeftParenthesis, "Expected '(' after the property name.");
        if (const auto display = expect(TokenKind::StringLiteral, "Expected a property display name."))
        {
            property.display_name = display->text;
        }
        expect(TokenKind::Comma, "Expected ',' after the property display name.");
        const auto type = expect_identifier("Expected a property type.");
        if (type)
        {
            const auto parsed_type = property_type_from_name(type->text);
            if (!parsed_type)
            {
                add_error(DiagnosticCode::InvalidPropertyType, type->location,
                          "Unknown property type '" + type->text + "'.");
            }
            else
            {
                property.type = *parsed_type;
                if (*parsed_type == PropertyType::Range)
                {
                    expect(TokenKind::LeftParenthesis, "Expected '(' after Range.");
                    property.range_min = parse_number();
                    expect(TokenKind::Comma, "Expected ',' between Range bounds.");
                    property.range_max = parse_number();
                    expect(TokenKind::RightParenthesis, "Expected ')' after Range bounds.");
                    if (property.range_min && property.range_max && *property.range_min > *property.range_max)
                    {
                        add_error(DiagnosticCode::InvalidPropertyType, type->location,
                                  "Range minimum cannot exceed its maximum.");
                    }
                }
            }
        }
        expect(TokenKind::RightParenthesis, "Expected ')' after the property declaration.");
        expect(TokenKind::Equal, "Expected '=' before the property default value.");
        parse_default_value(property.default_value);
        if (!duplicate)
        {
            asset.properties.push_back(std::move(property));
        }
        return true;
    }

    bool ShaderParser::parse_resources(ShaderAsset& asset)
    {
        if (!expect(TokenKind::LeftBrace, "Expected '{' after Resources."))
        {
            return false;
        }
        while (!check(TokenKind::RightBrace) && !check(TokenKind::EndOfFile))
        {
            parse_resource_group(asset);
        }
        return expect(TokenKind::RightBrace, "Expected '}' to close Resources.").has_value();
    }

    bool ShaderParser::parse_resource_group(ShaderAsset& asset)
    {
        const auto group_token = expect_identifier("Expected a resource Binding Group.");
        if (!group_token)
        {
            consume();
            return false;
        }
        const auto group = binding_group_from_name(group_token->text);
        if (!group)
        {
            add_error(DiagnosticCode::InvalidResourceGroup, group_token->location,
                      "Unknown Binding Group '" + group_token->text + "'.");
        }
        expect(TokenKind::LeftBrace, "Expected '{' after the resource Binding Group.");
        while (!check(TokenKind::RightBrace) && !check(TokenKind::EndOfFile))
        {
            const auto name = expect_identifier("Expected a resource name.");
            if (!name)
            {
                consume();
                continue;
            }
            Resource resource;
            resource.group = group.value_or(BindingGroup::Pass);
            resource.name = name->text;
            resource.location = name->location;
            validate_identifier(asset, *name, "resource");
            const bool duplicate = contains_name(asset.resources, resource.name);
            if (duplicate)
            {
                add_error(DiagnosticCode::DuplicateResource, name->location,
                          "Duplicate resource '" + resource.name + "'.");
            }
            expect(TokenKind::Colon, "Expected ':' after the resource name.");
            parse_resource_type(resource);
            if (match(TokenKind::Equal))
            {
                parse_default_value(resource.default_value);
            }
            if (!duplicate)
            {
                asset.resources.push_back(std::move(resource));
            }
        }
        return expect(TokenKind::RightBrace, "Expected '}' to close the resource Binding Group.").has_value();
    }

    bool ShaderParser::parse_parameters(ShaderAsset& asset)
    {
        if (!expect(TokenKind::LeftBrace, "Expected '{' after Parameters."))
        {
            return false;
        }
        while (!check(TokenKind::RightBrace) && !check(TokenKind::EndOfFile))
        {
            parse_parameter_group(asset);
        }
        return expect(TokenKind::RightBrace, "Expected '}' to close Parameters.").has_value();
    }

    bool ShaderParser::parse_parameter_group(ShaderAsset& asset)
    {
        const auto group_token = expect_identifier("Expected the Pass parameter Binding Group.");
        if (!group_token)
        {
            consume();
            return false;
        }
        const bool valid_group = group_token->text == "Pass";
        if (!valid_group)
        {
            add_error(DiagnosticCode::InvalidParameterGroup, group_token->location,
                      "Parameters v1 only supports the Pass Binding Group.");
        }
        expect(TokenKind::LeftBrace, "Expected '{' after the parameter Binding Group.");
        while (!check(TokenKind::RightBrace) && !check(TokenKind::EndOfFile))
        {
            const auto name = expect_identifier("Expected a parameter name.");
            if (!name)
            {
                consume();
                continue;
            }
            Parameter parameter;
            parameter.name = name->text;
            parameter.location = name->location;
            validate_identifier(asset, *name, "parameter");
            const bool duplicate = contains_name(asset.parameters, parameter.name);
            if (duplicate)
            {
                add_error(DiagnosticCode::DuplicateParameter, name->location,
                          "Duplicate parameter '" + parameter.name + "'.");
            }
            expect(TokenKind::Colon, "Expected ':' after the parameter name.");
            const auto type = expect_identifier("Expected a parameter type.");
            if (type)
            {
                const auto parsed_type = parameter_type_from_name(type->text);
                if (!parsed_type)
                {
                    add_error(DiagnosticCode::InvalidParameterType, type->location,
                              "Parameters v1 does not support type '" + type->text + "'.");
                }
                else
                {
                    parameter.type = *parsed_type;
                }
            }
            if (match(TokenKind::Equal))
            {
                parse_default_value(parameter.default_value);
                if (parameter.default_value.kind != DefaultValueKind::Numbers)
                {
                    add_error(DiagnosticCode::InvalidDefaultValue, parameter.default_value.location,
                              "Parameter defaults must be numeric.");
                }
            }
            if (!duplicate && valid_group)
            {
                asset.parameters.push_back(std::move(parameter));
            }
        }
        return expect(TokenKind::RightBrace, "Expected '}' to close the parameter Binding Group.").has_value();
    }

    bool ShaderParser::parse_resource_type(Resource& resource)
    {
        const auto type = expect_identifier("Expected a resource type.");
        if (!type)
        {
            return false;
        }

        const auto kind = resource_kind_from_name(type->text);
        if (!kind)
        {
            add_error(DiagnosticCode::InvalidResourceType, type->location,
                      "Unknown resource type '" + type->text + "'.");
            return false;
        }
        resource.kind = *kind;
        const bool has_element = match(TokenKind::LeftAngle);
        if (requires_element_type(*kind) != has_element)
        {
            add_error(DiagnosticCode::InvalidResourceType, type->location,
                      requires_element_type(*kind) ? "Resource type requires an element type."
                                                   : "Resource type does not accept an element type.");
            if (!has_element)
            {
                return false;
            }
        }
        if (!has_element)
        {
            return true;
        }

        const auto element = expect_identifier("Expected a resource element type.");
        if (element)
        {
            const auto parsed_element = resource_element_type_from_name(element->text);
            if (!parsed_element || (is_matrix(*parsed_element) && !allows_matrix_element(*kind)))
            {
                add_error(DiagnosticCode::InvalidResourceType, element->location,
                          "Resource element type '" + element->text + "' is not supported by this resource kind.");
            }
            else
            {
                resource.element_type = *parsed_element;
            }
        }
        expect(TokenKind::RightAngle, "Expected '>' after the resource element type.");
        return resource.element_type != ResourceElementType::None;
    }
